--- a/index.html
+++ b/index.html
@@ -1934,18 +1934,25 @@
         <div class="popup-menu-main">
           <nav class="popup-menu-nav">
             <div class="popup-menu-title">Меню</div>
-            <div class="popup-menu-nav__item active_menu"><a class="menu-link" href="#main">главная</a></div>
-            <div class="popup-menu-nav__item"><a class="menu-link" href="#formula">преимущества</a></div>
-            <div class="popup-menu-nav__item"><a class="menu-link" href="#repair-types">виды ремонта</a></div>
-            <div class="popup-menu-nav__item"><a class="menu-link" href="#portfolio">наше портфолио</a></div>
-            <div class="popup-menu-nav__item"><a class="menu-link" href="#transparency">прозрачность работы</a></div>
-            <div class="popup-menu-nav__item"><a class="menu-link" href="#problems">решение проблем</a></div>
-            <div class="popup-menu-nav__item"><a class="menu-link" href="#designs">дизайнерские решения</a></div>
-            <div class="popup-menu-nav__item"><a class="menu-link" href="#director">об основателе</a></div>
-            <div class="popup-menu-nav__item"><a class="menu-link" href="#reviews">отзывы клиентов</a></div>
-            <div class="popup-menu-nav__item"><a class="menu-link" href="#scheme">как мы работаем</a></div>
-            <div class="popup-menu-nav__item"><a class="menu-link" href="#faq">часто задаваемые вопросы</a></div>
-            <div class="popup-menu-nav__item"><a class="menu-link" href="#partners">наши партнеры</a></div>
+            <div class="popup-menu-nav__item active_menu"><a class="menu-link scroll-link" href="#main">главная</a>
+            </div>
+            <div class="popup-menu-nav__item"><a class="menu-link scroll-link" href="#formula">преимущества</a></div>
+            <div class="popup-menu-nav__item"><a class="menu-link scroll-link" href="#repair-types">виды ремонта</a>
+            </div>
+            <div class="popup-menu-nav__item"><a class="menu-link scroll-link" href="#portfolio">наше портфолио</a>
+            </div>
+            <div class="popup-menu-nav__item"><a class="menu-link scroll-link" href="#transparency">прозрачность
+                работы</a></div>
+            <div class="popup-menu-nav__item"><a class="menu-link scroll-link" href="#problems">решение проблем</a>
+            </div>
+            <div class="popup-menu-nav__item"><a class="menu-link scroll-link" href="#designs">дизайнерские решения</a>
+            </div>
+            <div class="popup-menu-nav__item"><a class="menu-link scroll-link" href="#director">об основателе</a></div>
+            <div class="popup-menu-nav__item"><a class="menu-link scroll-link" href="#reviews">отзывы клиентов</a></div>
+            <div class="popup-menu-nav__item"><a class="menu-link scroll-link" href="#scheme">как мы работаем</a></div>
+            <div class="popup-menu-nav__item"><a class="menu-link scroll-link" href="#faq">часто задаваемые вопросы</a>
+            </div>
+            <div class="popup-menu-nav__item"><a class="menu-link scroll-link" href="#partners">наши партнеры</a></div>
             <div class="link-list link-list-menu mobile-hide"><a class="menu-link no-overflow" href="#">
                 <svg width="17" height="16" fill="none" viewBox="0 0 17 16" xmlns="http://www.w3.org/2000/svg">
                   <path
