--- a/index.html
+++ b/index.html
@@ -2138,7 +2138,8 @@
           <div class="nav-wrap nav-wrap-repair">
             <nav class="nav-popup nav-popup-repair-types transparancy-cut">
               <div class="nav-list nav-list-popup-repair">
-                <button class="button_o popup-repair-types-nav__item active">Потолок: Демонтажные работы</button>
+                <button class="button_o popup-repair-types-nav__item preview_active">Потолок: Демонтажные
+                  работы</button>
                 <button class="button_o popup-repair-types-nav__item">Потолок: Монтажные работы</button>
                 <button class="button_o popup-repair-types-nav__item">Стены: Демонтажные работы</button>
                 <button class="button_o popup-repair-types-nav__item">Стены: Монтажные работы</button>
@@ -2174,7 +2175,7 @@
               </thead>
             </table>
             <div class="popup-repair-types-content-table">
-              <table class="popup-repair-types-content-table__list">
+              <table class="popup-repair-types-content-table__list slide-active">
                 <tbody>
                   <tr class="mobile-row showHide">
                     <td class="repair-types-name">Очистка потолка от побелки, краски,водоэмульсионки</td>
