--- a/index.html
+++ b/index.html
@@ -1144,7 +1144,7 @@
             </div>
             <button class="button">Перезвоните мне</button>
             <div class="checkbox"><input class="checkbox__input" type="checkbox" id="checkbox3"> <label
-                class="checkbox__label" for="checkbox3"></label>
+                class="checkbox__label" for="checkbox3" required></label>
               <div class="checkbox__descr checkbox__descr_round-feedback">Я соглашаюсь с <a href="#popup-privacy"
                   class="link-privacy" data-toggle="modal">политикой конфиденциальности</a>
               </div>
@@ -1228,11 +1228,31 @@
             </div>
             <div class="designs-slider__style-slide scand"><img src="./images/designs/item2.jpg" alt=""></div>
             <div class="designs-slider__style-slide scand"><img src="./images/designs/item3.jpg" alt=""></div>
+            <div class="slider-counter desktop-hide" id="designs-counter1">
+              <div class="slider-counter-content">
+                <div class="slider-counter-content__current">1</div>
+                <div class="slider-counter-content__total">3</div>
+              </div>
+            </div>
+            <div class="slider-arrow-tablet-mobile slider-arrow-tablet-mobile_left desktop-hide" id="design_left1">
+            </div>
+            <div class="slider-arrow-tablet-mobile slider-arrow-tablet-mobile_right desktop-hide" id="design_right1">
+            </div>
           </div><!-- /slide-style scand-->
           <div class="designs-slider__style2 designs-slider__container" data-designslider="2">
             <div class="designs-slider__style-slide trad slide-active"><img src="./images/designs/trad_item1.jpg"
                 alt=""></div>
             <div class="designs-slider__style-slide trad"><img src="./images/designs/trad_item2.jpg" alt=""></div>
+            <div class="slider-counter desktop-hide" id="designs-counter2">
+              <div class="slider-counter-content">
+                <div class="slider-counter-content__current">1</div>
+                <div class="slider-counter-content__total">2</div>
+              </div>
+            </div>
+            <div class="slider-arrow-tablet-mobile slider-arrow-tablet-mobile_left desktop-hide" id="design_left2">
+            </div>
+            <div class="slider-arrow-tablet-mobile slider-arrow-tablet-mobile_right desktop-hide" id="design_right2">
+            </div>
           </div><!-- /slide-style traditional-->
           <div class="designs-slider__style3 designs-slider__container" data-designslider="3">
             <div class="designs-slider__style-slide loft slide-active"><img src="./images/designs/loft1.jpg" alt="">
@@ -1240,40 +1260,51 @@
             <div class="designs-slider__style-slide loft"><img src="./images/designs/loft2.jpg" alt=""></div>
             <div class="designs-slider__style-slide loft"><img src="./images/designs/loft3.jpg" alt=""></div>
             <div class="designs-slider__style-slide loft"><img src="./images/designs/loft4.jpg" alt=""></div>
+            <div class="slider-counter desktop-hide" id="designs-counter3">
+              <div class="slider-counter-content">
+                <div class="slider-counter-content__current">1</div>
+                <div class="slider-counter-content__total">4</div>
+              </div>
+            </div>
+            <div class="slider-arrow-tablet-mobile slider-arrow-tablet-mobile_left desktop-hide" id="design_left3">
+            </div>
+            <div class="slider-arrow-tablet-mobile slider-arrow-tablet-mobile_right desktop-hide" id="design_right3">
+            </div>
           </div><!-- /slide-style loft-->
           <div class="designs-slider__style4 designs-slider__container" data-designslider="4">
             <div class="designs-slider__style-slide minimal slide-active"><img src="./images/designs/item2.jpg" alt="">
             </div>
             <div class="designs-slider__style-slide minimal"><img src="./images/designs/item1.jpg" alt=""></div>
             <div class="designs-slider__style-slide minimal"><img src="./images/designs/item2.jpg" alt=""></div>
+            <div class="slider-counter desktop-hide" id="designs-counter4">
+              <div class="slider-counter-content">
+                <div class="slider-counter-content__current">1</div>
+                <div class="slider-counter-content__total">3</div>
+              </div>
+            </div>
+            <div class="slider-arrow-tablet-mobile slider-arrow-tablet-mobile_left desktop-hide" id="design_left4">
+            </div>
+            <div class="slider-arrow-tablet-mobile slider-arrow-tablet-mobile_right desktop-hide" id="design_right4">
+            </div>
           </div><!-- /slide-style minimal-->
           <div class="designs-slider__style5 designs-slider__container" data-designslider="5">
             <div class="designs-slider__style-slide modern slide-active"><img src="./images/designs/item1.jpg" alt="">
             </div>
             <div class="designs-slider__style-slide modern"><img src="./images/designs/item2.jpg" alt=""></div>
             <div class="designs-slider__style-slide modern"><img src="./images/designs/item1.jpg" alt=""></div>
+            <div class="slider-counter desktop-hide" id="designs-counter5">
+              <div class="slider-counter-content">
+                <div class="slider-counter-content__current">1</div>
+                <div class="slider-counter-content__total">3</div>
+              </div>
+            </div>
+            <div class="slider-arrow-tablet-mobile slider-arrow-tablet-mobile_left desktop-hide" id="design_left5">
+            </div>
+            <div class="slider-arrow-tablet-mobile slider-arrow-tablet-mobile_right desktop-hide" id="design_right5">
+            </div>
           </div><!-- /slide-style modern-->
         </div><!-- /designs-slider -->
-        <div class="slider-counter slider-counter-responsive desktop-hide" id="designs-counter">
-          <div class="slider-counter-content">
-            <div class="slider-counter-content__current">1</div>
-            <div class="slider-counter-content__total">3</div>
-          </div>
-        </div>
-        <div class="slider-arrow-tablet-mobile slider-arrow-tablet-mobile_left desktop-hide" id="design_left">
-          <svg width="25" height="34" fill="none" viewBox="0 0 25 34" preserveAspectRatio="xMinYMin meet"
-            xmlns="http://www.w3.org/2000/svg">
-            <path d="M23 32L2 17 23 2" stroke="#fff" stroke-opacity=".5" stroke-width="3" stroke-linecap="round"
-              stroke-linejoin="round"></path>
-          </svg>
-        </div>
-        <div class="slider-arrow-tablet-mobile slider-arrow-tablet-mobile_right desktop-hide" id="design_right">
-          <svg width="25" height="34" fill="none" viewBox="0 0 25 34" preserveAspectRatio="xMinYMin meet"
-            xmlns="http://www.w3.org/2000/svg">
-            <path d="M2 2l21 15L2 32" stroke="#fff" stroke-opacity=".5" stroke-width="3" stroke-linecap="round"
-              stroke-linejoin="round"></path>
-          </svg>
-        </div>
+
       </div><!-- /designs-slider-wrap -->
       <div class="preview-block visible scand-preview-block" data-designpreview="1">
         <div class="preview-block__item scand-preview">
