--- a/index.html
+++ b/index.html
@@ -165,11 +165,14 @@
             <div class="feedback__icon"><img src="./images/main/feedback_icon.svg" alt="phone"></div>
             <div class="feedback__title">Получите консультацию от специалиста в удобное для Вас время</div>
             <form class="feedback__form" id="feedback1">
-              <div class="feedback__input"><input class="input feedback__input-input masked-phone" name="phone"
-                  type="text" placeholder="Введите номер телефона" id="feedback-input1" minlength="18"></div>
-              <button class="button">Перезвоните мне</button>
-              <div class="checkbox"><input class="checkbox__input" type="checkbox" id="checkbox1"> <label
-                  class="checkbox__label" for="checkbox1"></label>
+              <div class="feedback__input">
+                <input class="input feedback__input-input masked-phone" name="phone" type="text"
+                  placeholder="Введите номер телефона" id="feedback-input1" minlength="18" required="true">
+              </div>
+              <button type="submit" class="button">Перезвоните мне</button>
+              <div class="checkbox">
+                <input class="checkbox__input" type="checkbox" id="checkbox1">
+                <label class="checkbox__label" for="checkbox1"></label>
                 <div class="checkbox__descr checkbox__descr_round-feedback">Я соглашаюсь с <a href="#popup-privacy"
                     class="link-privacy" data-toggle="modal">политикой конфиденциальности</a>
                 </div>
@@ -538,14 +541,19 @@
           мечту о ремонте со встречи?</span>
       </div>
       <div class="feedback-block__descr">Обсудите проект со специалистом или вызовите замерщика.</div>
-      <form class="feedback-block__form" id="feedback2"><label><span><sup>*</sup>Введите ваше имя:</span> <input
-            type="text" class="feedback-block__form-input feedback-block__form-input_name" name="name" required=""
-            maxlength="20"></label> <label><span><sup>*</sup>Введите ваш номер:</span> <input type="text"
-            class="feedback-block__form-input feedback-block__form-input_phone masked-phone" name="phone"
-            id="feedback-input2" required="" placeholder="+7 (___)___-__-__" minlength="18"></label>
-        <button class="button button-feedback-block">Перезвоните мне</button>
-        <div class="checkbox checkbox-feedback-block"><input class="checkbox__input" type="checkbox" id="checkbox2"
-            required=""> <label class="checkbox__label" for="checkbox2"></label>
+      <form class="feedback-block__form" id="feedback2">
+        <label><span><sup>*</sup>Введите ваше имя:</span>
+          <input type="text" class="feedback-block__form-input feedback-block__form-input_name" name="name"
+            required="true" maxlength="20"></label>
+        <label>
+          <span><sup>*</sup>Введите ваш номер:</span>
+          <input type="text" class="feedback-block__form-input feedback-block__form-input_phone masked-phone"
+            name="phone" id="feedback-input2" placeholder="+7 (___)___-__-__" minlength="18" required="true">
+        </label>
+        <button type="submit" class="button button-feedback-block">Перезвоните мне</button>
+        <div class="checkbox checkbox-feedback-block">
+          <input class="checkbox__input" type="checkbox" id="checkbox2">
+          <label class="checkbox__label" for="checkbox2"></label>
           <div class="checkbox__descr">Нажимая на кнопку, Вы даете согласие на <a href="#popup-privacy"
               class="link-privacy" data-toggle="modal">обработку своих персональных данных</a>
           </div>
@@ -1140,11 +1148,11 @@
           <div class="feedback__title">Получите консультацию от специалиста в удобное для Вас время</div>
           <form class="feedback__form" id="feedback3">
             <div class="feedback__input"><input class="input feedback__input-input masked-phone" name="phone"
-                type="text" placeholder="Введите номер телефона" id="feedback-input3" minlength="18">
+                type="text" placeholder="Введите номер телефона" id="feedback-input3" minlength="18" required="true">
             </div>
-            <button class="button">Перезвоните мне</button>
-            <div class="checkbox"><input class="checkbox__input" type="checkbox" id="checkbox3"> <label
-                class="checkbox__label" for="checkbox3" required></label>
+            <button type="submit" class="button">Перезвоните мне</button>
+            <div class="checkbox"><input class="checkbox__input" type="checkbox" id="checkbox3">
+              <label class="checkbox__label" for="checkbox3"></label>
               <div class="checkbox__descr checkbox__descr_round-feedback">Я соглашаюсь с <a href="#popup-privacy"
                   class="link-privacy" data-toggle="modal">политикой конфиденциальности</a>
               </div>
@@ -1533,14 +1541,19 @@
           Вашего помещения</span>
       </div>
       <div class="feedback-block__descr">Обсудите проект со специалистом или вызовите замерщика.</div>
-      <form class="feedback-block__form" id="feedback4"><label><span><sup>*</sup>Введите ваше имя:</span> <input
-            type="text" class="feedback-block__form-input feedback-block__form-input_name" name="name" required=""
-            maxlength="20"></label> <label><span><sup>*</sup>Введите ваш номер:</span> <input type="text"
-            class="feedback-block__form-input feedback-block__form-input_phone masked-phone" name="phone"
-            id="feedback-input4" required="" placeholder="+7 (___)___-__-__" minlength="18"></label>
-        <button class="button button-feedback-block">Перезвоните мне</button>
-        <div class="checkbox checkbox-feedback-block"><input class="checkbox__input" type="checkbox" id="checkbox4"
-            required=""> <label class="checkbox__label" for="checkbox4"></label>
+      <form class="feedback-block__form" id="feedback4">
+        <label><span><sup>*</sup>Введите ваше имя:</span>
+          <input type="text" class="feedback-block__form-input feedback-block__form-input_name" name="name"
+            required="true" maxlength="20">
+        </label>
+        <label><span><sup>*</sup>Введите ваш номер:</span>
+          <input type="text" class="feedback-block__form-input feedback-block__form-input_phone masked-phone"
+            name="phone" id="feedback-input4" placeholder="+7 (___)___-__-__" minlength="18" required="true">
+        </label>
+        <button type="submit" class="button button-feedback-block">Перезвоните мне</button>
+        <div class="checkbox checkbox-feedback-block">
+          <input class="checkbox__input" type="checkbox" id="checkbox4">
+          <label class="checkbox__label" for="checkbox4"></label>
           <div class="checkbox__descr">Нажимая на кнопку, Вы даете согласие на <a href="#popup-privacy"
               class="link-privacy" data-toggle="modal">обработку своих персональных данных</a>
           </div>
@@ -1887,14 +1900,19 @@
         <span>на свой вопрос?</span>
       </div>
       <div class="feedback-block__descr">Обсудите проект со специалистом или вызовите замерщика.</div>
-      <form class="feedback-block__form" id="feedback5"><label><span><sup>*</sup>Введите ваше имя:</span> <input
-            type="text" class="feedback-block__form-input feedback-block__form-input_name" name="name" required=""
-            maxlength="20"></label> <label><span><sup>*</sup>Введите ваш номер:</span> <input type="text"
-            class="feedback-block__form-input feedback-block__form-input_phone masked-phone" name="phone"
-            id="feedback-input5" required="" placeholder="+7 (___)___-__-__" minlength="18"></label>
-        <button class="button button-feedback-block">Перезвоните мне</button>
-        <div class="checkbox checkbox-feedback-block"><input class="checkbox__input" type="checkbox" id="checkbox5"
-            required=""> <label class="checkbox__label" for="checkbox5"></label>
+      <form class="feedback-block__form" id="feedback5">
+        <label><span><sup>*</sup>Введите ваше имя:</span>
+          <input type="text" class="feedback-block__form-input feedback-block__form-input_name" name="name"
+            required="true" maxlength="20"></label>
+        <label>
+          <span><sup>*</sup>Введите ваш номер:</span>
+          <input type="text" class="feedback-block__form-input feedback-block__form-input_phone masked-phone"
+            name="phone" id="feedback-input5" placeholder="+7 (___)___-__-__" minlength="18" required="true">
+        </label>
+        <button type="submit" class="button button-feedback-block">Перезвоните мне</button>
+        <div class="checkbox checkbox-feedback-block">
+          <input class="checkbox__input" type="checkbox" id="checkbox5">
+          <label class="checkbox__label" for="checkbox5"></label>
           <div class="checkbox__descr">Нажимая на кнопку, Вы даете согласие на <a href="#popup-privacy"
               class="link-privacy" data-toggle="modal">обработку своих персональных данных</a>
           </div>
@@ -2110,12 +2128,14 @@
       <div class="feedback__icon"><img src="./images/main/feedback_icon.svg" alt=""></div>
       <div class="feedback__title">Получите консультацию от специалиста в удобное для Вас время</div>
       <form class="feedback__form" id="feedback6">
-        <div class="feedback__input"><input class="input feedback__input-input masked-phone" name="phone" type="text"
-            placeholder="Введите номер телефона" id="feedback-input6" minlength="18">
+        <div class="feedback__input">
+          <input class="input feedback__input-input masked-phone" name="phone" type="text"
+            placeholder="Введите номер телефона" id="feedback-input6" minlength="18" required="true">
         </div>
-        <button class="button button-consultation">Перезвоните мне</button>
-        <div class="checkbox"><input class="checkbox__input" type="checkbox" id="checkbox6"> <label
-            class="checkbox__label checkbox__label-consultation" for="checkbox6"></label>
+        <button type="submit" class="button button-consultation">Перезвоните мне</button>
+        <div class="checkbox">
+          <input class="checkbox__input" type="checkbox" id="checkbox6">
+          <label class="checkbox__label checkbox__label-consultation" for="checkbox6"></label>
           <div class="checkbox__descr checkbox__descr_round-feedback">Я соглашаюсь с <a href="#popup-privacy"
               class="link-privacy" data-toggle="modal">политикой конфиденциальности</a>
           </div>
